--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <p>This text is normal NOW.</p>
 
 <p><b>LOOK This text is bold NOW.</b></p>
-  <p>Pamodh was here</p>
+  <p>Pamodh was here hehe</p>
   <p style="font-size:60px;" >Unfortunately Hasith wasn't there </p>
 </body>
 
